# routes/index.js
@@ -1,10 +1,38 @@
 const express = require('express');
-const passport = require('passport');
 const router = express.Router();
+const bodyParser = require('body-parser');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('../swagger.json');
 
-router.use('/', require('./swagger'));
+const passport = require('passport');
+const session = require('express-session');
+
+router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.get('/', (req, res) => {
-    res.send('Welcome to the Event Planning API');
+    if (req.session.user) {
+        res.send('<p>Hello! Welcome to Event Planning</p>' +
+          '<br> <a href="/api-docs">API Documentation</a>' +
+          '<br> Logged in as: ' + req.session.user.name  +
+          '<br> <a href="/logout">Logout</a>');
+    } else {
+        res.send('<p>Hello! Welcome to Event Planning</p>' +
+          '<br> <a href="/api-docs">API Documentation</a>' +
+          '<br> <a href="/github">Login with GitHub</a>');
+    }
+});
+    
+router.get('/github', passport.authenticate('github'));
+router.get('/logout', (req, res) => {
+    req.session.destroy();
+    res.redirect('/');
+});
+    
+router.get('/github/callback', passport.authenticate('github', { 
+    failureRedirect: '/',
+    session: false
+}), (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
 });
 
 const userRoutes = require('./user');
@@ -13,13 +41,5 @@ router.use('/users', userRoutes);
 const infoRoutes = require('./info');
 router.use('/info', infoRoutes);
 
-router.get('/login', passport.authenticate('github'), (req, res) => {});
-
-router.get('/logout', function(req, res, next) {
-    req.logout(function(err) {
-        if (err) { return next(err); }
-        res.redirect('/');
-    });
-});
 
 module.exports = router;
